--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Phaser 2</title>
+	<title>Tether 2</title>
 	<script src="lib/phaser.js"></script>
 	<script src="js/preload.js"></script>
 	<script src="js/level1.js"></script>
